2000-09-24  olicha  <olivier.chapuis@free.fr>

	* fvwm/gnome.c (GNOME_ProcessClientMessage):
	fixed a gnome hints core dump
	
2000-09-24  olicha  <olivier.chapuis@free.fr>

	* utils/fvwm-menu-desktop.in:
	fixed a problem with directory with a space in its name
	
2000-09-24  Mikhael Goikhman  <migo@homemail.com>

	* rpm/Makefile.am:
	* rpm/fvwm.spec.in:
	updated to work with older /bin/rpm, don't compile with -g and more

	* fvwm/modconf.c (SendConfigToModule):
	fixed sending new module config to existing modules, which want it,
	now it only sends to modules with the matching name/alias

2000-09-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	(HandleEnterNotify):
	* fvwm/focus.c (focus_grab_buttons):
	MouseFocusClickRaises applies to NeverFocus windows too.

	* libs/Parse.c (SkipSpaces):
	removed static prefix

	* fvwm/functions.c (ExecuteFunction):
	whitespace ate the start of module config and comment lines are ignored
	this helps cut-and-past with module configs

	* fvwm/focus.c (focus_grab_buttons):
	removed redundant code

2000-09-16  Mikhael Goikhman  <migo@homemail.com>

	* libs/wild.c:
	added #include "config.h" (for string.h) to avoid warning

	* configure.in:
	'unset' is now used only on shells which support it;
	reverted to the old smr_CHECK_LIB, so readline usage is twice again;
	added --with-termcap-library and --with-ncurses-library

	* INSTALL.fvwm:
	* README:
	updated documentation

	* NEWS: s/Sped/Speed/, some more

	* rpm/Makefile.am:
	* rpm/fvwm.spec.in:
	* Makefile.am:
	added files and rules for generating bzip2 and rpm archives

2000-09-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1 (Example):
	removed some text about xview workarounds

2000-09-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/window_flags.h:
	* fvwm/fvwm.h:
	* fvwm/misc.c (GrabEm):
	* fvwm/add_window.c (regrab_focus_win):
	(setup_key_and_button_grabs):
	(setup_focus_policy):
	* fvwm/events.c (HandleEnterNotify):
	(HandleButtonPress):